--- a/Gastos.Pwa/Components/_Imports.razor
+++ b/Gastos.Pwa/Components/_Imports.razor
@@ -32,6 +32,7 @@
 @using Gastos.Pwa.Components.Pages
 @using Gastos.Pwa.Components.Shared
 @using Gastos.Pwa.Components.Shared.Monitor
+@using static Gastos.Pwa.Components.Shared.MyButtonType
 @using Gastos.Pwa.Components.Shared.Table
 @using Gastos.Pwa.Shared.Extensions
 @using Gastos.Pwa.Shared.Models
@@ -43,4 +44,3 @@
 @using Gastos.Shared.Resources
 @using RS = Gastos.Shared.Resources.ResourceStrings
 @using Gastos.Shared.Validators
-
