--- a/Gastos.Pwa/Components/Features/Receipts/ReceiptItemEditDialog.razor
+++ b/Gastos.Pwa/Components/Features/Receipts/ReceiptItemEditDialog.razor
@@ -15,8 +15,8 @@
                     <MudAutocomplete T="Guid?" @bind-Value="@_editingItem.ProductId" For="@(() => _editingItem.ProductId)"
                                      ToStringFunc="(Guid? id) => _products.FirstOrDefault(p => p.Id == id)?.Name ?? string.Empty"
                                      SearchFunc="SearchProductAsync" Class="mb-5" Immediate @ref="_focusProduct" />
-                    <TableButton Action="TableAction.Add" OnClick="OpenAddProductDialogAsync" ToolTipText="@($"{Loc.Get(RS.ActCreate)} {Loc.Get(RS.EntityProduct)}")" Size="Size.Medium" Class="mx-0 px-0" />
-                    <TableButton Action="TableAction.Edit" OnClick="OpenEditProductDialogAsync" ToolTipText="@($"{Loc.Get(RS.ActEdit)} {Loc.Get(RS.EntityProduct)}")" Size="Size.Medium" Hidden="@(_editingItem.ProductId == Guid.Empty)" Class="me-5 ms-0 ps-0" />
+                    <MyButton Type="IconAdd" OnClick="OpenAddProductDialogAsync" Text=@Loc.Get(RS.EntityProduct) Class="mx-0 px-0" />
+                    <MyButton Type="IconEdit" OnClick="OpenEditProductDialogAsync" Text=@Loc.Get(RS.EntityProduct) Hidden="@(_editingItem.ProductId == Guid.Empty)" Class="me-5 ms-0 ps-0" />
                 </MudStack>
                 <MudStack Row Class="my-5">
                     <MudNumericField @bind-value="@_editingItem.Quantity" For="@(() => _editingItem.Quantity)" Immediate
@@ -28,8 +28,8 @@
             </MudForm>
         </DialogContent>
         <DialogActions>
-            <MudButton OnClick="Cancel">@Loc.Get(RS.ActCancel)</MudButton>
-            <MudButton Color="Color.Primary" OnClick="SubmitAsync" Disabled="@(!IsDataChanged)">@Loc.Get(RS.ActSave)</MudButton>
+            <MyButton Type="BtnCancel" OnClick="Cancel" />
+            <MyButton Type="BtnUpdate" OnClick="SubmitAsync" Disabled="@(!IsDataChanged)" />
         </DialogActions>
     </MudDialog>
 }
