--- a/Gastos.Pwa/wwwroot/css/site.css
+++ b/Gastos.Pwa/wwwroot/css/site.css
@@ -24,17 +24,17 @@
 }
 
 /* Media queries para orientación */
-@media screen and (orientation: landscape) {
+/*@media screen and (orientation: landscape) {
     html {
-        font-size: 14px; /* Ajustar tamaño de fuente en landscape */
-    }
+        font-size: 14px;*/ /* Ajustar tamaño de fuente en landscape */
+    /*}
 }
 
 @media screen and (orientation: portrait) {
     html {
-        font-size: 16px; /* Tamaño normal en portrait */
-    }
-}
+        font-size: 16px;*/ /* Tamaño normal en portrait */
+    /*}
+}*/
 
 .mud-navmenu.mud-navmenu-default .mud-nav-link.active:not(.mud-nav-link-disabled) {
     color: white;
